--- a/styles/index.css
+++ b/styles/index.css
@@ -40,12 +40,11 @@ main{
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin-top:8%;
     width: 30%;
     background: rgb(0,0,0);
     background: linear-gradient(90deg, rgba(0,0,0,1) 40%, rgba(0,0,0,0) 100%);
 }
-#narcosTitle{
+.narcosTitle{
     display: flex;
 
     font-size: 75px;
@@ -91,36 +90,155 @@ button:hover{
     margin-left:30px;
     width: 600px;
     height: 250px;
-    background-color: aliceblue;
+    background-color: rgb(0, 0, 0);
 }
-#Series-tv{
+.series-tv{
     margin-left: 30px;
+    margin-top: 40px;
 }
 #sessão-de-filmes{
     display: flex;
     
 }
 #box1{
-    background-image: url(/images/posters/american-ultra-7.jpg);
+    background-image: url(/images/posters/unsolved.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top;
 }
 #box2{
-    background-image: url(/images/posters/american-ultra-7.jpg);
+    background-image: url(/images/posters/crow.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top;
 }
 #box3{
-    background-image: url(/images/posters/american-ultra-7.jpg);
+    background-image: url(/images/posters/club.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top;
 }
 #box4{
-    background-image: url(/images/posters/american-ultra-7.jpg);
+    background-image: url(/images/posters/houseOfCards.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top;
+}
+#emAlta{
+  
+    display: flex;
+}
+#box5{
+    background-image: url(/images/posters/deadpool-1.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+#box6{
+    background-image: url(/images/posters/13\ reasons.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+#box7{
+    background-image: url(/images/posters/all-work-all-play-1.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+#box8{
+    background-image: url(/images/posters/batman-v-superman-dawn-of-justice-1.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+#terror{
+    display: flex;
+}
+#box9{
+    background-image: url(/images/posters/terorr1.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+#box10{
+    background-image: url(/images/posters/terror2.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+#box11{
+    background-image: url(/images/posters/suburra.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+#box12{
+    background-image: url(/images/posters/terror3.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+#suspense{
+    display: flex ;
+}
+#box13{
+    background-image: url(/images/posters/terminator-genisys-1.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+#box14{
+    background-image: url(/images/posters/1237563c8fa05574d438da04c3d84e6c40648886.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+#box15{
+    background-image: url(/images/posters/fauda.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+#box16{
+    background-image: url(/images/posters/marcoPolo.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+#topDaSemana{
+    display: flex;
+    margin-bottom: 60px;
+}
+#box17{
+    background-image: url(/images/posters/dea552095671edd0f44ece6cfeddfa8c024ec3e7.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+#box18{
+    background-image: url(/images/posters/905536f9fa7262074caa47f1887e221e8e2b3796.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+#box19{
+    background-image: url(/images/posters/af4c97ea43a3272ddafa15f08715f8d67f3132d4.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+#box20{
+    background-image: url(/images/posters/b285c67f497f8671807603e783e3884d87457b0f.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+#polonais{
+    background-image: url(/images/posters/Polonais.png);
+
+}
+#banner-text2{
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 12%, rgba(0,0,0,0) 100%);
 }
